fixed minor spelling and layout issues

--- a/public/stylesheets/compiled/welcome.css
+++ b/public/stylesheets/compiled/welcome.css
@@ -49,45 +49,47 @@ img { border-style: none; }
 #bullets p { text-align: center; }
 
 /* line 89, ../../../app/stylesheets/welcome.sass */
-#features_container { border-top: 1px solid #999; border-bottom: 1px solid #999; background-color: #c9d787; font-size: 1.5em; width: 100%; }
+#features_container { border-top: 1px solid #999; background-color: #c9d787; font-size: 1.5em; width: 100%; }
 
 /* line 96, ../../../app/stylesheets/welcome.sass */
 #features { width: 40em; margin: 0 auto; }
 /* line 99, ../../../app/stylesheets/welcome.sass */
+#features ul { margin-bottom: 0; }
+/* line 101, ../../../app/stylesheets/welcome.sass */
 #features li { vertical-align: text-top; display: inline-block; padding: 0em 1em 1.5em 0em; width: 20em; font-size: 85%; text-align: justify; background-position: 0 0; background-repeat: no-repeat; }
-/* line 108, ../../../app/stylesheets/welcome.sass */
+/* line 110, ../../../app/stylesheets/welcome.sass */
 #features li h2 { font-size: 110%; margin-left: 3em; margin-bottom: 1em; }
 
-/* line 113, ../../../app/stylesheets/welcome.sass */
+/* line 115, ../../../app/stylesheets/welcome.sass */
 #feature1 { background-image: url(/images/li_team.png); }
 
-/* line 115, ../../../app/stylesheets/welcome.sass */
+/* line 117, ../../../app/stylesheets/welcome.sass */
 #feature2 { background-image: url(/images/li_screen.png); }
 
-/* line 117, ../../../app/stylesheets/welcome.sass */
+/* line 119, ../../../app/stylesheets/welcome.sass */
 #feature3 { background-image: url(/images/li_updates.png); }
 
-/* line 119, ../../../app/stylesheets/welcome.sass */
+/* line 121, ../../../app/stylesheets/welcome.sass */
 #feature4 { background-image: url(/images/li_simple.png); }
 
-/* line 122, ../../../app/stylesheets/welcome.sass */
+/* line 124, ../../../app/stylesheets/welcome.sass */
 #flash_error { background: #FBE3E4 none repeat scroll 0 0; border: 2px solid #FBC2C4; color: #8A1F11; margin-bottom: 1em; padding: 0.8em; }
 
-/* line 129, ../../../app/stylesheets/welcome.sass */
-#signup_container { width: 100%; margin-top: 4em; margin-bottom: 2em; font-size: 1.4em; }
-/* line 134, ../../../app/stylesheets/welcome.sass */
+/* line 131, ../../../app/stylesheets/welcome.sass */
+#signup_container { background: #fff url(/images/bg_intro.png) repeat-x scroll 0 0; width: 100%; margin-top: 0em; padding-top: 4em; margin-bottom: 2em; font-size: 1.4em; }
+/* line 138, ../../../app/stylesheets/welcome.sass */
 #signup_container #logo { text-align: center; }
-/* line 136, ../../../app/stylesheets/welcome.sass */
+/* line 140, ../../../app/stylesheets/welcome.sass */
 #signup_container #signup { width: 35em; margin: 0 auto; }
-/* line 139, ../../../app/stylesheets/welcome.sass */
+/* line 143, ../../../app/stylesheets/welcome.sass */
 #signup_container #signup #email_form { height: 3em; font-size: 1.3em; width: 25em; margin: 1em auto; vertical-align: baseline; }
-/* line 145, ../../../app/stylesheets/welcome.sass */
+/* line 149, ../../../app/stylesheets/welcome.sass */
 #signup_container #signup #email_form input { font-size: 0.7em; }
-/* line 147, ../../../app/stylesheets/welcome.sass */
+/* line 151, ../../../app/stylesheets/welcome.sass */
 #signup_container #signup #email_form .image_button { vertical-align: text-bottom; }
 
-/* line 153, ../../../app/stylesheets/welcome.sass */
+/* line 157, ../../../app/stylesheets/welcome.sass */
 #footer { height: 50px; position: relative; clear: both; font-size: 1em; width: 100%; text-align: center; background-color: #c9d787; border-style: solid; border-color: #999; border-width: 1px; }
 
-/* line 165, ../../../app/stylesheets/welcome.sass */
+/* line 169, ../../../app/stylesheets/welcome.sass */
 #thanks { font-size: 2em; }
